--- a/README
+++ b/README
@@ -40,5 +40,5 @@ interface and useability.
     >> a message box will show with the JSON obj being submited to the databse.
 6) goto (2)
 
-***** VIDEOS OF TESTING ARE IN THE VIDS FOLDER *****
+***** VIDEOS OF TESTING ARE IN THE testingvid FOLDER *****
 
